Visual bug on search section overflow

--- a/core/frontend/src/css/_spacing.scss
+++ b/core/frontend/src/css/_spacing.scss
@@ -33,6 +33,10 @@
     margin-left: 4rem;
 }
 
+.p-l-0 {
+    padding-left: 0rem;
+}
+
 .p-l-2 {
     padding-left: 0.5rem;
 }
