--- a/core/frontend/src/css/pages/_dashboard.scss
+++ b/core/frontend/src/css/pages/_dashboard.scss
@@ -3,6 +3,8 @@
 .govuk-grid-row {
   &.grey {
     background-color: #DEE0E2;
+    width: 100%;
+    margin: 0;
   }
 }
 
